--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.11",
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^7.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "swiper": "^8.4.2",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
