--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.8.6",
-    "axios": "^1.1.3",
+    "axios": "^1.2.1",
     "framer-motion": "^7.6.4",
     "google-map-react": "^2.2.0",
     "google-maps-react": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
+    "react-multi-select-component": "^4.3.4",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.3",
+    "react-select": "^5.7.0",
     "redux-persist": "^6.0.0",
     "swiper": "^8.4.4",
     "vite-plugin-svgr": "^2.2.2",
